name:                hsmenu
version:             0.1.0.0
synopsis:            dmenu-like daemon with DBus API
-- description:         
homepage:            https://github.com/projedi/hsmenu
license:             GPL-2
license-file:        LICENSE
author:              Alexander Shabalin
maintainer:          shabalyn.a@gmail.com
category:            System
build-type:          Simple
cabal-version:       >=1.10

executable hsmenu
  main-is:             Main.hs
  -- other-modules:       
  build-depends:       base >= 4.7 && < 4.8
  hs-source-dirs:      src/
  default-language:    Haskell2010
