name:                hsmenu
version:             0.1.0
synopsis:            dmenu-like daemon with DBus API
-- description:         
homepage:            https://github.com/projedi/hsmenu
license:             GPL-2
license-file:        LICENSE
author:              Alexander Shabalin
maintainer:          shabalyn.a@gmail.com
category:            System
build-type:          Simple
cabal-version:       >=1.10

executable hsmenu
  main-is:             Main.hs
  -- other-modules:       
  build-depends:       base >= 4.7 && < 4.8
                     , containers >= 0.5.5 && < 0.6
                     , dbus >= 0.10.8 && < 0.11
                     , directory >= 1.2.1 && < 1.3
                     , filepath >= 1.3.0 && < 1.4
                     , process >= 1.2 && < 1.3
  hs-source-dirs:      src/
  default-language:    Haskell2010
  ghc-options:         -Wall -fwarn-tabs -fwarn-incomplete-record-updates
                       -fwarn-monomorphism-restriction -fwarn-unused-do-bind
